Fix wrap guide

--- a/index.less
+++ b/index.less
@@ -149,3 +149,7 @@
 .invisible-character {
   color: @invisible;
 }
+
+.wrap-guide {
+  opacity: 0.1;
+}
